fix overflow on phone screen

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
